crayfish-test/macros/tests/trybuild/bad_finish.stderr
error: try expression is not allowed in finish block. TODO: this check might be false positive.
 --> $DIR/bad_finish.rs:9:31
  |
9 |             let b = a.unwrap()?;
  |                               ^
